Fixes style bugs with spacing.

--- a/client/landing/jetpack-cloud/components/threat-item/style.scss
+++ b/client/landing/jetpack-cloud/components/threat-item/style.scss
@@ -20,6 +20,7 @@
 		@include breakpoint( '>800px' ) {
 			justify-content: flex-end;
 			padding-right: 48px;
+			padding-left: 20px;
 		}
 	}
 
